# app/models/user.rb
@@ -2,9 +2,11 @@ class User < ApplicationRecord
   mount_uploader :avatar, ImageUploader
   has_secure_password
 
+  has_many :comments, dependent: :nullify
+
   validates :name, presence: true, length: { maximum: 50 }
   validates :email, presence: true, format: { with: /\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z/i }, uniqueness: { case_sensitive: false }
-  validates :password, presence: true, length: { minimum: 8, maximum: 255 }
+  validates :password, presence: true, allow_nil: true, length: { minimum: 8, maximum: 255 }
 
   def issue_jwt_token type: :access
     exp_duration = Settings.jwt_token_exp.try(type)
